document, 3px rule and update styles

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -76,6 +76,15 @@ a:focus {
     }
 }
 
+.wsv-drag-ghost {
+    letter-spacing: .01em;
+
+    text-shadow: 0px 1px 2px @bc-shadow-large;
+
+    .dark & {
+        text-shadow: 0px 1px 2px @dark-bc-shadow-large;
+    }
+}
 
 /* Toolbar-related styles */
 
